<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    
    <View
        android:background="#989393"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="130dp"
        android:layout_height="5dp"/>

    <TextView
        android:fontFamily="@font/bold"
        android:text="@string/want_to_delete"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/delete_Dial_No"
        android:background="@drawable/no_btn"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/no_delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/delete_Dial_Yes"
        android:fontFamily="@font/bold"
        android:background="@drawable/yes_btn"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/yes_delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>