<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/card_view_color"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Name Notes-->
                <TextView
                    android:layout_weight="10"
                    android:id="@+id/notesTitle"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:maxLines="1"
                    android:layout_marginEnd="2dp"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:id="@+id/viewPriority"
                    android:layout_gravity="end"
                    android:background="@drawable/red_dot"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

            </LinearLayout>

            <!--Main Notes-->
            <TextView
                android:id="@+id/notesSubTitle"
                android:fontFamily="@font/regular"
                android:textColor="#D6D3D3"
                android:textSize="14sp"
                android:layout_marginTop="2dp"
                android:text="@string/title_des_splash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Date-->
            <TextView
                android:id="@+id/noteDate"
                android:fontFamily="@font/bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:maxLines="1"
                android:layout_marginTop="5dp"
                android:text="@string/date_Notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>