<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bac_color"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/txt_NoteApp"
        android:layout_width="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/red_color"
        android:fontFamily="@font/bold"
        android:text="@string/title_note_app_splash"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <TextView
        android:id="@+id/txt_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_des_splash"
        android:textColor="@color/red_color"
        android:textSize="18sp"
        android:gravity="center"
        android:fontFamily="@font/regular"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NoteApp" />

    <TextView
        android:id="@+id/txt_by_Developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/title_by_developers"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/red_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_splash"
        style="?android:attr/progressBarStyle"
        android:theme="@style/ProgressBar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_by_Developers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_hello" />

</androidx.constraintlayout.widget.ConstraintLayout>