<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bac_color"
    android:layout_height="match_parent"
    tools:context=".ui.Fragments.CreateNotesFragment">

    <LinearLayout
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Title-->
        <EditText
            android:id="@+id/edtTitle"
            android:background="@drawable/edt_txt_shape"
            android:fontFamily="@font/regular"
            android:hint="@string/title_create_notes"
            android:padding="15dp"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Subtitle-->
        <EditText
            android:id="@+id/edtSubtitle"
            android:background="@drawable/edt_txt_shape"
            android:fontFamily="@font/regular"
            android:hint="@string/subtitle_create_notes"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFFFFF"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Dot status-->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pGreen"
                android:background="@drawable/green_dot"
                android:layout_width="25dp"
                android:layout_height="25dp"/>

            <ImageView
                android:id="@+id/pYellow"
                android:background="@drawable/yellow_dot"
                android:layout_width="25dp"
                android:layout_marginStart="20dp"
                android:layout_height="25dp"/>

            <ImageView
                android:id="@+id/pRed"
                android:background="@drawable/red_dot"
                android:layout_width="25dp"
                android:layout_marginStart="20dp"
                android:layout_height="25dp"/>

        </LinearLayout>

        <!--Notes-->
        <EditText
            android:id="@+id/edt_Notes"
            android:background="@drawable/edt_txt_shape"
            android:fontFamily="@font/regular"
            android:hint="@string/notes_create_notes"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:textColorHint="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="350dp"/>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveNotes"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_done_black"
        android:backgroundTint="@color/red_color"
        android:layout_margin="26sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>